# purely-functional-data-structures

./: README.md  binary-tree.sld  exercise-2-1.scm  exercise-2-2.scm  exercise-2-4.scm  exercise-2-6.scm
rust/: Cargo.toml
rust/src/: binary_tree.rs  lib.rs  shared_data.rs  traits.rs  unbalanced_map.rs  unbalanced_set.rs
scheme/: exercise-2-1.scm  exercise-2-3.scm  exercise-2-5.scm  heap.sld  unbalanced-set.sld
